2006-09-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (disp_value): Force clean printout of "NaN" on save, print,
	or show commands.  Without this, the value is printed as "nan.0",
	which is not parsable by set or load commands.
	Bugfix #1544347

2006-09-16  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Rework the checks for cairo and pango so that the error
	messages are more helpful, mostly by copying the defaults pkg-config
	messages and making them non-fatal.
	Revert the minimum version of pango to 1.10.0 but refuse to compile the
	wxWidgets terminal with pango 1.10.2.

2006-09-16  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (set format): Make documentation for missing
	<axes> argument match actual behaviour.

2006-09-15  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (DrawToDC): Fill in gray the empty space
	that has been let by a change in the aspect ratio of the window.

	* trm/wxt.trm (TERM_HELP): Try to document the window resize behaviour
	a little better.

2006-09-14  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Bump the required version of pango to 1.10.3 to fix a
	bug in earlier versions about scaling matrix not being applied properly
	to the fonts.

2006-09-12  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (format specifiers): Fix typo in one example.

2006-09-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtConfigDialog::OnButton):
	* src/wxterminal/wxt_gui.h (wxt_settings_queue, wxt_settings_apply):
	Queue the modified rendering settings instead of applying them right
	away, so that the plot is not messed up during a window resize.

2006-09-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Fix the use of the
	Symbol font in non-enhanced mode, a peace of code was not pasted
	properly.
