@@ -1,5 +1,5 @@
 /*
- * $Id: wxt_gui.cpp,v 1.27 2006/09/15 13:47:46 tlecomte Exp $
+ * $Id: wxt_gui.cpp,v 1.28 2006/09/21 14:29:26 tlecomte Exp $
  */
 
 /* GNUPLOT - wxt_gui.cpp */
@@ -647,17 +647,17 @@ void wxtPanel::DrawToDC(wxDC &dc, wxRegion &region)
 	if (plot.device_xmax*plot.ymax > plot.device_ymax*plot.xmax) {
 		dc.SetPen( *wxTRANSPARENT_PEN );
 		dc.SetBrush( wxBrush( wxT("LIGHT GREY"), wxSOLID ) );
-		dc.DrawRectangle(plot.xmax/plot.oversampling_scale*plot.xscale,
+		dc.DrawRectangle((int) (plot.xmax/plot.oversampling_scale*plot.xscale),
 				0,
-				plot.device_xmax - plot.xmax/plot.oversampling_scale*plot.xscale,
+				plot.device_xmax - (int) (plot.xmax/plot.oversampling_scale*plot.xscale),
 				plot.device_ymax);
 	} else if (plot.device_xmax*plot.ymax < plot.device_ymax*plot.xmax) {
 		dc.SetPen( *wxTRANSPARENT_PEN );
 		dc.SetBrush( wxBrush( wxT("LIGHT GREY"), wxSOLID ) );
 		dc.DrawRectangle(0,
-				plot.ymax/plot.oversampling_scale*plot.yscale,
+				(int) (plot.ymax/plot.oversampling_scale*plot.yscale),
 				plot.device_xmax,
-				plot.device_ymax - plot.ymax/plot.oversampling_scale*plot.yscale);
+				(int) (plot.device_ymax - plot.ymax/plot.oversampling_scale*plot.yscale));
 	}
 
 #ifdef USE_MOUSE
